--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,9 +1,55 @@
 @import "vars";
 @import "libs";
 @import "fonts";
+@import "global";
 
-
-
-
+.header__top-inner{
+  display: flex;
+  justify-content: space-between;
+  height: 90px;
+  align-items: center;
+}
+.header__text{
+  margin-left: auto;
+  margin-right: 50px;
+  color: $color-text;
+  span{
+    color: $red;
+  }
+  a{
+    color: $color-text;
+  }
+}
+.header__btn{
+  padding: 4px;
+  width: 72px;
+  border-radius: 4px;
+  color: #fff;
+  text-align: center;
+  font-size: 12px;
+  &-login{
+    background-color: $green;
+  }
+  &-register{
+    background-color: $red;
+    margin-left: 7px;
+  }
+}
+.header__menu{
+  background-color: $bg;
+}
+.menu__list{
+  display: flex;
+  height: 60px;
+  align-items: center;
+  li+li{
+    margin-left: 30px;
+    // display: inline-block;
+  }
+  a{
+    color: #fff;
+    font-size: 14px;
+  }
+}
 
 @import "media";
