--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -51,5 +51,54 @@
     font-size: 14px;
   }
 }
-
+.search{
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  min-height: 533px;
+  &__inner{
+    padding: 160px 0px 100px;
+    color: #fff;
+    text-align: center;
+    &-title{
+      margin-bottom: 10px;
+      font-size: 48px;
+      line-height: 1.5;
+      font-weight: 700;
+    }
+    &-text{
+      margin-bottom: 38px;
+      font-size: 20px;
+      line-height: 1.5;
+      font-weight: 500;
+    }
+  }
+}
+.search__inner-form{ 
+  max-width: 670px;
+  margin: 0 auto;
+  position: relative;
+  input{
+    display: block;
+    width: 100%;
+    border-radius: 4px;
+    box-shadow: 0px 1px 10px 0px rgba(124, 178, 64, 0.75);
+    height: 56px;
+    border: none;
+    font-size: 14px;
+    font-weight: 500;
+    padding-left: 25px;
+    padding-right: 65px;
+    &::placeholder{
+      color: #90a4ae;
+    }
+  }
+  button{
+    position: absolute;
+    border: none;
+    background-color: transparent;
+    top: 17px;
+    right: 20px;
+  }
+}
 @import "media";
