--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -9,6 +9,7 @@ html{
 a{
   display: inline-block;
   text-decoration: none;
+  cursor: pointer;
 }
 ul{
   margin: 0;
@@ -20,8 +21,33 @@ body{
   font-size: 15px;
   line-height: 24px;
 }
+button{
+  cursor: pointer;
+}
 .container{
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
+}
+.container__fluid{
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 30px;
+}
+
+@media (max-width: 720px){
+  .container-fluid{
+    padding: 0 30px;
+  }
+}
+.title{
+  color: $bg;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 60px;
+  text-align: center;
+}
+.rate__star{
+  display: inline-block;
+  margin-right: 13px;
 }
