--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,3 +2,13 @@ $color-text: #546e7a;
 $green: #8bc34a;
 $red: #e74c3c;
 $bg: #263238;
+
+@mixin f500{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+}
+
+@mixin f700{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+}
