--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -66,13 +66,13 @@
       margin-bottom: 10px;
       font-size: 48px;
       line-height: 1.5;
-      font-weight: 700;
+      @include f700;
     }
     &-text{
       margin-bottom: 38px;
       font-size: 20px;
       line-height: 1.5;
-      font-weight: 500;
+      @include f500;
     }
   }
 }
@@ -88,7 +88,7 @@
     height: 56px;
     border: none;
     font-size: 14px;
-    font-weight: 500;
+    @include f500;
     padding-left: 25px;
     padding-right: 65px;
     &::placeholder{
@@ -153,7 +153,7 @@
     padding: 10px 30px;
     min-height: 90px;
     align-items: center;
-    font-weight: 500;
+    @include f500;
     border-bottom: 1px solid #e7ecf2;
   }
   &-name{
@@ -172,7 +172,7 @@
   &-price{
     font-size: 20px;
     color: $bg;
-    font-weight: 700;
+    @include f700;
   }
   &-info{
     display: flex;
@@ -198,7 +198,7 @@
     span{
       color: $color-text;
       font-size: 14px;
-      font-weight: 500;
+      @include f500;
     }
   }
   &-rating{
@@ -259,10 +259,74 @@
   //   transform: translate3d(-1836px, 0px, 0px) !important;
   // }
 }
-
-
-
-
+//end slider
+//start advantages
+.advantages{
+  background-color: $bg;
+  padding: 110px 0px;
+  color: #fff;
+  &__title{
+    color: #fff;
+    margin-bottom: 90px;
+  }
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__item{
+    max-width: 370px;
+    text-align: center;
+    transition: all .3s;
+    &:hover{
+      .advantages__item-img{
+        background-color: $green;
+      }
+      .advantages__item-title{
+        color: $green;
+      }
+      g{
+        fill: #fff;
+      }
+    }
+  }
+}
+.advantages__item-img{
+  width: 114px;
+  height: 114px;
+  background-color: #fff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  transition: all .3s;
+}
+.icosvg-1{
+  svg{
+    width: 70px;
+  }
+}
+.icosvg-2{
+  svg{
+    width: 70px;
+  }
+}
+.icosvg-3{
+  svg{
+    width: 70px;
+  }
+}
+.advantages__item-title{
+  font-size: 24px;
+  line-height: 30px;
+  @include f500;
+  margin-bottom: 25px;
+  transition: all .3s;
+}
+.advantages__item-text{
+  color: #b0bec5;
+}
 
 
 
