--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -367,7 +367,38 @@
     text-align: center;
   }
 }
-
-
+//end author
+//start tutorial
+.tutorial{
+  padding: 75px 0px 120px;
+  &__title{
+    margin-bottom: 64px;
+  }
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__item{
+    max-width: 370px;
+    max-height: 370px;
+    width: 100%;
+  }
+  &__img{
+    min-height: 270px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+  }
+  &__link{
+    font-size: 24px;
+    line-height: 60px;
+    @include f700;
+    color: $bg;
+    padding: 20px;
+    text-align: center;
+    background-color: #f8f8f8;
+    width: 100%;
+  }
+}
 
 @import "media";
