--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -6,6 +6,10 @@ html{
 *::after{
   box-sizing: inherit;
 }
+html,
+body {
+	height: 100%;
+}
 a{
   display: inline-block;
   text-decoration: none;
@@ -24,6 +28,20 @@ body{
 button{
   cursor: pointer;
 }
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
+}
+.content {
+	flex: 1 0 auto;
+}
+.page__content{
+  background-color: $gray;
+}
+.footer {
+	flex: 0 0 auto;
+}
 .container{
   max-width: 1200px;
   margin: 0 auto;
@@ -33,6 +51,9 @@ button{
   max-width: 100%;
   margin: 0 auto;
   padding: 0 30px;
+  &-slider{
+    text-align: center;
+  }
 }
 
 @media (max-width: 720px){
@@ -51,3 +72,35 @@ button{
   display: inline-block;
   margin-right: 13px;
 }
+* {
+	margin: 0;
+	padding: 0;
+}
+.breadcrumbs{
+  &__inner{
+    padding: 45px 0px 40px;
+  }
+  &__list{
+    li{
+      display: inline-block;
+      position: relative;
+      & + li{
+        padding-left: 24px;
+        &::before{
+          content: '-';
+          position: absolute;
+          color: $green;
+          left: 8px;
+        }
+      }
+      &:last-child{
+        a, span{
+          color: $bg;
+        }
+      }
+    }
+      a{
+          color: #b0bec5;
+      }
+    }
+  }
