--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,6 +2,7 @@ $color-text: #546e7a;
 $green: #8bc34a;
 $red: #e74c3c;
 $bg: #263238;
+$gray: #f4f6f5;
 
 @mixin f500{
   font-family: 'Roboto', sans-serif;
