--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -58,6 +58,17 @@
   background-size: cover;
   background-position: center center;
   min-height: 533px;
+  //задаю властивості для сторінки new item
+  &.page__search{
+    min-height: 230px;
+    .search__inner{
+      padding: 55px 0px 70px;
+      &-text{
+        margin-bottom: 20px;
+      }
+    }
+  }
+  /////////////////////////////////////////////////
   &__inner{
     padding: 160px 0px 100px;
     color: #fff;
@@ -187,7 +198,7 @@
     max-width: 245px;
     .author__avatar{
       display: inline-block;
-      width: 30px;
+      min-width: 30px;
       height: 30px;
       border-radius: 50%;
       background-size: cover;
@@ -276,7 +287,7 @@
   &__item{
     max-width: 370px;
     text-align: center;
-    transition: all .3s;
+    transition: all .5s;
     &:hover{
       .advantages__item-img{
         background-color: $green;
@@ -546,5 +557,338 @@
 .link-linkedin{
   background-position: -56px 0px;
 }
-
+//end footer
+//start product page
+.product__page-inner{
+  display: flex;
+  padding-bottom: 110px;
+}
+.product__page-aside{
+  margin-right: 30px;
+}
+.aside__item{
+  background-color: #fff;
+  border: 1px solid #dedede;
+  padding: 0px 32px 32px;
+  margin-bottom: 30px;
+  width: 270px;
+}
+.aside__title{
+  border-bottom: 1px solid #dde3e8;
+  font-size: 20px;
+  color: $bg;
+  @include f700;
+  padding: 22px 0px 19px;
+}
+.category__list{
+  padding-top: 10px;
+  li{
+    padding: 10px 0px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    padding-left: 20px;
+    &::before{
+      content: "\f105";
+      font-family: 'icomoon' !important;
+      color: $green;
+      font-size: 18px;
+      position: absolute;
+      left: 0;
+    }
+  }
+  a{
+    color: $bg;
+  }
+  span{
+    color: #90a4ae;
+    margin-left: 10px;
+  }
+}
+.price__range{
+  form{
+    padding-top: 20px;
+  }
+  button{
+    margin-top: 55px;
+    color: #fff;
+    padding: 16px 10px;
+    background-color: $green;
+    text-align: center;
+    @include f500;
+    width: 100%;
+    display: block;
+    border: none;
+    position: relative;
+    &::before{
+      content: "\1f32a";
+      font-family: 'icomoon' !important;
+      color: #fff;
+      font-size: 15px;
+      position: absolute;
+      left: 58px;
+      top: 16px;
+    }
+  }
+}
+.irs-max, .irs-min{
+  display: none;
+}
+.irs--flat .irs-line{
+  background-color: #f2f5f8;
+  height: 5px;
+}
+.irs--flat .irs-bar{
+  height: 5px;
+  background-color: #37474f;
+}
+.irs--flat .irs-handle{
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 4px solid $green;
+    background-color: #fff;
+    top: 20px;
+}
+.irs--flat .irs-handle>i:first-child{
+  display: none;
+}
+.irs-from, .irs-to, .irs-single{
+  top: 45px;
+}
+.irs--flat .irs-from:before, .irs--flat .irs-to:before, .irs--flat .irs-single:before{
+  display: none;
+}
+.irs--flat .irs-from, .irs--flat .irs-to, .irs--flat .irs-single{
+  background-color: transparent;
+  padding: 0;
+  color: #78909c;
+  font-size: 15px;
+}
+.product__page-aside{
+  .product__item-img{
+    min-height: 120px;
+  }
+  .product__item{
+    box-shadow: none;
+    padding-bottom: 28px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #dde3e8;
+  }
+  .aside__product-item{
+    .product__item:last-child{
+      border: none;
+      padding-bottom: 0;
+    }
+    .product__item:first-child{
+      margin-top: 25px;
+    }
+  }
+  .product__item-content{
+    padding: 0;
+    min-height: 75px;
+    border-bottom: none;
+  }
+  .product__item-info{
+    padding: 0;
+    min-height: 0;
+  }
+  .product__item-title{
+    font-size: 16px;
+  }
+  .product__item-price{
+    font-size: 16px;
+  }
+  .rate__star{
+    margin-right: 0px;
+  }
+  .jq-ry-container{
+    padding: 0px;
+  }
+}
+.top__sellers-link{
+  padding: 16px 10px;
+  display: block;
+  width: 100%;
+  background-color: $green;
+  color: #fff;
+  text-align: center;
+  @include f500;
+}
+.product__page-content{
+  width: 100%;
+}
+.product__page-filter{
+  padding: 0px 20px;
+  margin-bottom: 30px;
+  background-color: #fff;
+  height: 60px;
+  border: 1px solid #dedede;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  button{
+    background-color: transparent;
+    border: none;
+    font-size: 16px;
+    color: #90a4ae;
+    outline: none;
+    &.active{
+      color: $green;
+    }
+  }
+  .product__page-filter--sort{
+    color: #707070;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+  }
+  .icon-sort-amount-desc{
+    font-size: 18px;
+    color: #455a64;
+    margin-right: 14px;
+  }
+  .icon-sort-up{
+    color: #707070;
+    margin-left: 14px;
+  }
+  .icon-th-list{
+    margin-left: 15px;
+  }
+}
+.product__page-content{
+  .product__item{
+    max-width: 270px;
+    background-color: #fff;
+    transition: all .5s;
+  }
+  .product__item-img{
+    min-width: 180px;
+    min-height: 180px;
+  }
+  .product__item-content{
+    padding: 10px 20px;
+  }
+  .product__item-title{
+    font-size: 16px;
+  }
+  .product__item-info{
+    min-height: 65px;
+    padding: 10px 20px;
+  }
+  .rate__star{
+    margin-right: 5px;
+  }
+  .jq-ry-container{
+    padding: 0;
+  }
+}
+.product__page-items{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+}
+.pagination{
+  &__list{
+    li{
+      display: inline-block;
+      & + li{
+        margin-left: 6px;
+      }
+    }
+    a, 
+    span{
+      box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+      width: 43px;
+      height: 38px;
+      background-color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 16px;
+      color: $bg;
+      @include f500;
+      &.active{
+        background-color: $red;
+        color: #fff;
+      }
+    }
+  }
+}
+.product__item-text{
+  display: none;
+}
+.product__item-price{
+  span{
+    display: none;
+  }
+}
+.product__item-list{
+  display: none;
+  .icon-comment-o, .icon-heart-o{
+    display: inline-block;
+    font-size: 12px;
+    color: #70838d;
+    padding-left: 50px;
+    border-left: 1px solid #aeb4bb;
+    position: relative;
+    span{
+      @include f500;
+      color: $bg;
+    }
+    &::before{
+      font-size: 16px;
+      color: $green;
+      position: absolute;
+      left: 20px;
+      top: 0px;
+    }
+  }
+  .icon-comment-o{
+    padding-right: 30px;
+    &::before{
+      top: -2px;
+    }
+  }
+}
+.product__item-page--content{
+  &.list{
+    max-width: 100%;
+    .product__item-img{
+      width: 240px;
+      float: left;
+      height: 100%;
+    }
+    .product__item-text{
+      display: block;
+      font-size: 14px;
+      color: #70838d;
+      margin-top: 15px;
+      margin-bottom: 5px;
+    }
+    .product__item-price{
+      font-size: 30px;
+      span{
+        margin-top: 28px;
+        display: block;
+        font-size: 13px;
+        color: #aeb4bb;
+      }
+    }
+    .product__item-name{
+      max-width: 480px;
+    }
+  .product__item-content{
+      padding-top: 23px;
+    }
+    .product__item-list{
+      display: block;
+    }
+    .product__item-rating{
+      margin-left: auto;
+      margin-right: 30px
+    }
+  }
+}
 @import "media";
